added bootstrap classes to list and buttons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Simple JS App</title>
   </head>
   <body>
-    <ul class='pokemon-list'></ul>
+    <ul class='pokemon-list list-group'></ul>
     <div id='modal-container'></div>
 
     <script src="js/promise-polyfill.js"></script>
