--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <title>Simple JS App</title>
   </head>
   <body>
+    <nav class= "navbar navbar-light bg-light">
+      <a class="navbar-brand" href="index.html">Pokedex</a>
+    </nav>
+
     <ul class='pokemon-list list-group'></ul>
+
+    <!-- Bootstrap modal template -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
