applied bootstrap components to pokemon items and stylized

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class= "navbar navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Pokedex</a>
+      <a class="navbar-brand h1" href="index.html">Pokédex</a>
     </nav>
 
     <ul class='pokemon-list list-group'></ul>
